recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:6: error: not found: value occurences
    1 + occurences(l.tail,v)
        ^Occurrences:8: error: not found: value occurences
    occurences(l.tail,v)
    ^